// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Design note pin component should match the snapshot of note with index 1`] = `
<button
  aria-label="Comment '1' position"
  class="design-note-pin gl-absolute gl-flex gl-items-center gl-justify-center gl-text-sm js-image-badge"
  style="left: 10px; top: 10px;"
  type="button"
>
  1
</button>
`;

exports[`Design note pin component should match the snapshot of note without index 1`] = `
<button
  aria-label="Comment form position"
  class="comment-indicator gl-absolute gl-bg-transparent gl-border-0 gl-flex gl-items-center gl-justify-center gl-text-sm"
  style="left: 10px; top: 10px;"
  type="button"
>
  <gl-icon-stub
    class="gl-bg-white gl-border-2 gl-border-solid gl-border-white gl-rounded-full"
    name="image-comment-dark"
    size="24"
    variant="current"
  />
</button>
`;

exports[`Design note pin component should match the snapshot when pin is resolved 1`] = `
<button
  aria-label="Comment form position"
  class="comment-indicator gl-absolute gl-bg-transparent gl-border-0 gl-flex gl-items-center gl-justify-center gl-text-sm resolved"
  style="left: 10px; top: 10px;"
  type="button"
>
  <gl-icon-stub
    class="gl-bg-white gl-border-2 gl-border-solid gl-border-white gl-rounded-full"
    name="image-comment-dark"
    size="24"
    variant="current"
  />
</button>
`;

exports[`Design note pin component should match the snapshot when position is absent 1`] = `
<button
  aria-label="Comment form position"
  class="comment-indicator gl-bg-transparent gl-border-0 gl-flex gl-items-center gl-justify-center gl-text-sm"
  type="button"
>
  <gl-icon-stub
    class="gl-bg-white gl-border-2 gl-border-solid gl-border-white gl-rounded-full"
    name="image-comment-dark"
    size="24"
    variant="current"
  />
</button>
`;
